; ModuleID = '/home/carl/AnghaBench/libgit2/tests/filter/extr_ident.c_add_blob_and_filter.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/filter/extr_ident.c_add_blob_and_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [15 x i8] c"crlf/identtest\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"identtest\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i8*)* @add_blob_and_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_blob_and_filter(i8* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_4__, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = bitcast %struct.TYPE_4__* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %10, i8 0, i64 8, i1 false)
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %11)
  %13 = load i32, i32* @g_repo, align 4
  %14 = call i32 @git_blob_create_from_workdir(i32* %7, i32 %13, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = load i32, i32* @g_repo, align 4
  %17 = call i32 @git_blob_lookup(i32** %8, i32 %16, i32* %7)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @git_filter_list_apply_to_blob(%struct.TYPE_4__* %9, i32* %19, i32* %20)
  %22 = call i32 @cl_git_pass(i32 %21)
  %23 = load i8*, i8** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @cl_assert_equal_s(i8* %23, i32 %25)
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @git_blob_free(i32* %27)
  %29 = call i32 @git_buf_dispose(%struct.TYPE_4__* %9)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_blob_create_from_workdir(i32*, i32, i8*) #2

declare dso_local i32 @git_blob_lookup(i32**, i32, i32*) #2

declare dso_local i32 @git_filter_list_apply_to_blob(%struct.TYPE_4__*, i32*, i32*) #2

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #2

declare dso_local i32 @git_blob_free(i32*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_4__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
